--- a/guessinggame.css
+++ b/guessinggame.css
@@ -36,7 +36,7 @@ h1, #guess-box, button {
   font-weight: bold;
 }
 
-#guessbox, button {
+#guess-box, button {
   font-size: 23px;
   margin-left: 15px;
   margin-bottom: 15px;
