--- a/guessinggame.css
+++ b/guessinggame.css
@@ -5,18 +5,24 @@ body {
   color: #a3a3c2;
   background-color: #47476b;
   font-family: Optima, Arial, sans-serif;
+  margin-top: 7%;
 }
 
 h1 {
   font-family: Palatino, "Times New Roman", serif;
-  width: 670px;
+  width: 705px;
   text-decoration: underline;
+  text-align: center;
   padding: 15px 0px;
 }
 
 h3 {
   color: #c2c2d6;
   font-family: "Trebuchet MS", Arial, sans-serif;
+}
+
+li {
+  display: none;
 }
 
 #guess-box {
@@ -28,6 +34,11 @@ h3 {
 button {
   height: 60px;
   width: 185px;
+}
+
+#guessbox:disabled, button:disabled {
+  color: #4d4d4d;
+  background-color: #a6a6a6;
 }
 
 h1, #guess-box, button {
