--- a/guessinggame.css
+++ b/guessinggame.css
@@ -21,7 +21,7 @@ h3 {
   font-family: "Trebuchet MS", Arial, sans-serif;
 }
 
-li {
+#previous-guesses, li {
   display: none;
 }
 
@@ -34,6 +34,11 @@ li {
 button {
   height: 60px;
   width: 185px;
+}
+
+button:hover {
+  color: #003311;
+  background-color: #3d3d5c;
 }
 
 #guess-box:disabled, button:disabled {
