--- a/guessinggame.css
+++ b/guessinggame.css
@@ -10,7 +10,7 @@ body {
 
 h1 {
   font-family: Palatino, "Times New Roman", serif;
-  width: 705px;
+  width: 694px;
   text-decoration: underline;
   text-align: center;
   padding: 15px 0px;
@@ -39,11 +39,13 @@ button {
 button:hover {
   color: #003311;
   background-color: #3d3d5c;
+  border-color: #FFFFFF;
 }
 
 #guess-box:disabled, button:disabled {
   color: #4d4d4d;
   background-color: #a6a6a6;
+  border-color: #FFFFFF;
 }
 
 h1, #guess-box, button {
@@ -54,7 +56,8 @@ h1, #guess-box, button {
 
 #guess-box, button {
   font-size: 23px;
-  margin-left: 15px;
+  margin-right: 15px;
   margin-bottom: 15px;
   font-family: "Andale Mono", "Courier New", monospace;
+  border-color: #000000;
 }
